Fix navigation uneven heights

--- a/main.css
+++ b/main.css
@@ -41,12 +41,12 @@ nav ul {
 
 nav ul li {
   display: inline-block;
-  margin: -1.9px;
+  margin-right: -4.1px;
 }
 
 nav ul li a {
   display: inline-block;
-  padding: 10px;
+  padding: 12px 10px;
   text-transform: uppercase;
   text-decoration: none;
   font-size: 1.3em;
